--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;900&display=swap');
 /* global styles */
 * {
   margin: 0;
@@ -5,20 +6,241 @@
   box-sizing: border-box;
   text-decoration: none;
   list-style: none;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 :root {
+  --blue: #0e7291;
   --green: #169300;
   --grey: #767676;
+  --white: #ffffff;
 }
 
-@font-face {
+/*@font-face {
   font-family: ;
   src: url();
-}
+}*/
+
 /* -x- global styles -x- */
 
+.socials {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  padding: 1rem 0.5rem;
+  background-color: #222222;
+  bottom: 40;
+  left: 0;
+}
+
+.socials i {
+  color: var(--white);
+  font-size: 20px;
+  transition: all 0.3s ease-in-out;
+}
+
+.socials i:hover {
+  color: var(--blue);
+}
+
 /* navbar */
+.top-header {
+  display: block;
+  padding: 0.5rem;
+  background-color: var(--blue);
+
+  font-size: 18px;
+  text-align: center;
+  color: var(--white);
+  font-weight: 600;
+}
+
+header {
+  height: 100vh;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: rgba(0, 0, 0, 0.67);
+  background-blend-mode: overlay;
+  background-image: url("/assets/hero-bg.JPG");
+}
+
+.bottom-header {
+  display: block;
+  padding: 0.5rem;
+
+  text-align: center;
+  color: var(--white);
+  font-size: 22px;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  color: white;
+  font-size: 30px;
+}
+
+.logo img {
+  width: 100px;
+}
+
+.logo-text {
+  font-size: 18px;
+  text-transform: uppercase;
+}
+
+.logo-text p {
+  line-height: 20px;
+}
+
+.navbar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 200px;
+  padding-left: 3rem;
+  padding-right: 3rem;
+}
+
+nav {
+}
+
+nav ul {
+  display: flex;
+  gap: 20px;
+}
+
+nav ul li a {
+  font-weight: 600;
+  color: var(--white);
+  font-size: 18px;
+  text-transform: uppercase;
+  transition: all 0.3s ease-in-out;
+}
+
+nav ul li a:hover {
+  color: #089fcd;
+}
+
+.navbar-btn a button {
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+
+.msg-btn {
+  font-size: 18px;
+  font-weight: 600;
+  color: var(--white);
+  padding: 10px 30px;
+  background-color: var(--blue);
+  border-radius: 50px;
+  border: none;
+  margin-right: 10px;
+}
+
+.msg-btn:hover {
+  background-color: #1587aa;
+}
+
+.give-btn {
+  font-size: 18px;
+  color: var(--white);
+  font-weight: 600;
+  padding: 7px 30px;
+  border: 2px solid var(--white);
+  border-radius: 50px;
+  background: none;
+}
+
+.give-btn:hover {
+  background-color: rgba(0, 0, 0, 0.181);
+}
+
+.hero {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 40px;
+  color: var(--white);
+  text-transform: uppercase;
+
+  height: 70%;
+}
+
+.hero-titles {
+  text-align: center;
+}
+
+.hero-titles h3 {
+  line-height: 30px;
+  font-size: 16px;
+  font-weight: 400;
+}
+
+.hero-titles h1 {
+  line-height: 40px;
+  font-size: 50px;
+}
+
+.hero button {
+  background-color: var(--blue);
+  padding: 10px 25px;
+  font-size: 18px;
+  font-weight: 600;
+  color: var(--white);
+  border: none;
+  border-radius: 30px;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+
+.hero button:hover {
+  background-color: #1587aa;
+}
 
 /* -x- navbar -x- */
+
+/* -- about -- */
+
+.section {
+  width: 100%;
+  margin: 50px 0;
+}
+
+.section-cols {
+  display: grid;
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+  width: 80%;
+  margin: 0 auto;
+}
+
+.about-img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* -x- about -x- */
+
+/* -- service -- */
+
+.service {
+  background-color: var(--blue);
+}
+
+.service-cards {
+  display: flex;
+  justify-content: space-between;
+  width: 80%;
+  margin: 0 auto;
+
+  color: var(--white);
+}
+
+/* -x- service -x- */
