--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
   --green: #169300;
   --grey: #767676;
   --white: #ffffff;
+  --black: #00000000;
 }
 
 /*@font-face {
@@ -220,6 +221,14 @@ nav ul li a:hover {
   margin: 0 auto;
 }
 
+.section-cols h1 {
+  font-size: 50px;
+}
+
+.section-cols p {
+  font-size: 16px;
+}
+
 .about-img {
   display: flex;
   justify-content: center;
@@ -232,15 +241,56 @@ nav ul li a:hover {
 
 .service {
   background-color: var(--blue);
+  padding: 3rem 0;
+}
+
+.service h1 {
+  color: var(--white);
+  font-size: 50px;
+  text-align: center;
+  margin-bottom: 80px;
 }
 
 .service-cards {
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+  gap: 50px;
   width: 80%;
   margin: 0 auto;
-
   color: var(--white);
 }
 
 /* -x- service -x- */
+
+/* -- books -- */
+
+.books {
+  padding: 2rem 0;
+}
+
+.books h1 {
+  font-size: 50px;
+  text-align: center;
+  margin-bottom: 80px;
+}
+
+.books-cards {
+  display: grid;
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+  gap: 30px;
+  width: 80%;
+  margin: 0 auto;
+  color: #000;
+}
+
+.books-cards h3 {
+  font-size: 22px;
+  margin-bottom: 5px;
+}
+
+.books-cards img {
+  width: 100px;
+  height: 150px;
+}
+
+/* -x- books -x- */
